Kubernetes/HotelsWebAPI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotels-web-api-deployment
  namespace: application
spec:
  replicas: 1
  selector:
     matchLabels:
       app: hotels-web-api
  template:
    metadata:
      labels:
        app: hotels-web-api
    spec:
      containers:
      - name: hotels-web-api
        image: ipashkayounot/dotnetwebapi:1.6-postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
