Kubernetes/HotelsWebAPI/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hotels-web-api-service
  namespace: application
spec:
  selector:
    app: hotels-web-api
  ports:
  - port: 80
