Kubernetes/HotelsWebAPI/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotels-web-api-ingress
  namespace: application
  # annotations:
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     add_header Access-Control-Allow-Origin *;
  #     add_header Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT";
  #     add_header Access-Control-Allow-Credentials true;
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hotels-web-api-service
                port:
                  number: 80
            path: /hotels
